--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "portfolio_website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://www.andev.io",
   "dependencies": {
-    "homepage": "http://www.andev.io/",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "gsap": "^3.9.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
@@ -23,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
